[package]
name = "mdbook-governance-vars"
version = "0.1.0"
edition = "2021"
description = "mdBook preprocessor: expand [[gov:KEY]] from governance YAML"
license = "MIT OR Apache-2.0"

[[bin]]
name = "mdbook-governance-vars"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mdbook = "=0.4.43"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
